[package]
name = "tarpc"
version = "0.36.0"
rust-version = "1.65.0"
authors = [
    "Adam Wright <adam.austin.wright@gmail.com>",
    "Tim Kuehn <timothy.j.kuehn@gmail.com>",
]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/tarpc"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "api", "microservices"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
description = "An RPC framework for Rust with a focus on ease of use."

[features]
default = []
serde1 = ["tarpc-plugins/serde1", "serde", "serde/derive", "serde/rc"]
full = [
    "serde1",
]

[badges]
travis-ci = { repository = "google/tarpc" }

[dependencies]
anyhow = "1.0"
fnv = "1.0"
futures = "0.3"
humantime = "2.0"
pin-project = "1.0"
rand = "0.9"
serde = { optional = true, version = "1.0", features = ["derive"] }
static_assertions = "1.1.0"
tarpc-plugins = { path = "../plugins", version = "0.14" }
thiserror = "2.0"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "log",
] }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry = { version = "0.30.0", default-features = false }
n0-future = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
assert_matches = "1.4"
bincode = "1.3"
opentelemetry = { version = "0.30.0", default-features = false }
n0-future = "0.2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]